# changelog

## 0.0.5

- 修改缓存相关配置
  - 修改 proxy_cache_path 中的 path 参数
  - 修改 proxy_cache_path 中 use_temp_path 为 off
    - nginx 收到后台服务的 response 之后会将这个临时文件保存到 proxy_temp_path 所配置的 path,而 use_temp_path 用于控制这一功能是否启用
  - 删除 proxy_temp_path 配置的路径
  - 删除全局 proxy_cache_key
- 调整 docker-compose 配置文件以适应 nginx 配置文件的修改

## 0.0.4

- `~ /vod/proxy/s3/video.(ts|m3u8)`中`proxy_cache_valid`的`time`字段设置成可配置的，读取`/bmi/skyvis/config/nginx`值中的`cache.valid`字段
  - 注意当往`template`文件中读取新的键值对的时候，还需要在`template resource`文件中的`keys`队列中添加该键

- 修复错误
  - check_cmd 是用来检测渲染后的模板(`{{.src}}`)的,
  - 将整个`nginx.conf`配置文件都用模板文件渲染，以防止`check_cmd`检测的根配置文件引用老的、错误的子配置文件从而导致一直检查不通过。
  - 优化 Dockerfile 文件，合并`RUN`命令，删除无用`ADD nginx.conf`步骤
  - 将`location = /bmi/skyvis/task/(transcode|perplay|watermark)`三个`location`优化成一个
  - `ngx.say()`在发送`HTTP Body`之前就已经发送过`HTTP Code 200`了，所以之后再调用`ngx.exit(code)`设置`HTTP Code`
  是不合法的。所以修正为：

    ```lua
        ngx.say(res.body)
        ngx.exit(res.status)
        # 改为
        ngx.status = res.status
        ngx.say(res.body)
        ngx.exit(ngx.HTTP_OK)
    ```

- 修改模板文件
  - 在 video location 中的 lua 脚本中,对获取鉴权请求的回复进行判断
  - 修改 location 的匹配规则
  - 修改 location 的路径匹配规则
  - 使用 `rewrite /bmi/skyvis/video(.*) /vod/proxy/s3/*$1 break;`语法重写 uri
  - 在使用已经被重写的 uri 作为 echo_location location 进行跳转

- 由 nginx 改为 openresty 以后,服务的启动命令需要做相应的修改
  - 因为 nginx 在 /etc/init.d 中添加了控制`service`的配置文件 nginx,所以可以使用`service nginx start`
  - 其实底层也是调用了`nginx -g 'daemon off;'`相关命令
  - openresty 没有配置`service`启动脚本所有直接使用`openresty -g 'daemon on;'`命令完全可以