@@ -2,6 +2,7 @@
 
 ## 0.0.5
 
+- 将 nginx 缓存中的 key zone size,max size,expire,inactive 等参数设为动态可配置的，从 etcd 中读取配置
 - 修改缓存相关配置
   - 修改 proxy_cache_path 中的 path 参数
   - 修改 proxy_cache_path 中 use_temp_path 为 off
